--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
@@ -51,5 +52,17 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task systemProperties(type: Test) {
+    useJUnitPlatform{
+        includeTags "systemProperties"
+    }
+}
+
+task wildberriesTest(type: Test) {
+    useJUnitPlatform{
+        includeTags "wildberriesTest"
     }
 }
