--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 def allureVersion = "2.17.3",
     selenideVersion = "6.4.0",
     junitVersion = "5.8.2",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = "1.7.32",
+        ownerVersion = "1.0.4"
 
 allure {
     report {
@@ -35,7 +36,8 @@ dependencies {
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion"
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:$ownerVersion"
     )
 }
 
@@ -64,5 +66,11 @@ task systemProperties(type: Test) {
 task wildberriesTest(type: Test) {
     useJUnitPlatform{
         includeTags "wildberriesTest"
+    }
+}
+
+task owner(type: Test) {
+    useJUnitPlatform{
+        includeTags "owner"
     }
 }
